<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shavedandbearded.tomato.Cookbook.RecipeActivity"
    android:background="@drawable/parchmentpage">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/edit_recipe_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_recipe"/>

        <LinearLayout
            android:id="@+id/ingredients_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_recipe_name"
            android:orientation="vertical">
        </LinearLayout>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingredients_list"
            android:background="@android:color/transparent"
            android:text="@string/add_ing_button"/>

        <EditText
            android:id="@+id/edit_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_add"
            android:hint="@string/hint_instructions"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_instructions"
            android:background="@android:color/transparent"
            android:text="@string/button_save"/>
    </RelativeLayout>
</ScrollView>
