<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shavedandbearded.tomato.Pantry.PantryEditItem"
    android:background="@drawable/p2">
    <ImageButton
        android:id="@+id/updateButton1"
        android:hint="save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_done_24dp"
        android:background="@android:color/transparent"
        android:onClick="updateButton1"
        android:layout_above="@+id/decreaseItemCount1" />
    <EditText
        android:id="@+id/itemNameEditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/updateButton1"
        android:hint="@string/itemNameEditText" />
    <TextView
        android:id="@+id/countTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/count"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/itemNameEditText1" />
    <TextView
        android:id="@+id/itemCountTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateButton1"
        android:layout_toRightOf="@id/countTextView1"
        android:layout_marginLeft="10dp"
        android:hint="1" />
    <ImageButton
        android:id="@+id/decreaseItemCount1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/decreaseItemCount"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_exposure_minus_1_24dp"
        android:layout_below="@+id/itemNameEditText1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <ImageButton
        android:id="@+id/increaseItemCount1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/decreaseItemCount1"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_exposure_plus_1_24dp"
        android:layout_alignBottom="@+id/deleteItem1"
        android:layout_alignLeft="@+id/bookmarkItem1"
        android:layout_alignStart="@+id/bookmarkItem1"
        android:layout_alignTop="@+id/updateButton1" />
    <ImageButton
        android:id="@+id/deleteItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_24dp"
        android:background="@android:color/transparent"
        android:onClick="deleteItem1"
        android:layout_below="@+id/decreaseItemCount1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <ImageButton
        android:id="@+id/bookmarkItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/bookmarkItem"
        android:src="@drawable/ic_star_outline_24dp"
        android:layout_alignBottom="@+id/increaseItemCount1"
        android:layout_toLeftOf="@+id/deleteItem1"
        android:layout_toStartOf="@+id/deleteItem1" />
</RelativeLayout>
