<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shavedandbearded.tomato.ShoppingList.EditItemActivity"
    android:background="@drawable/shp3t">
    <ImageButton
        android:id="@+id/updateButton"
        android:hint="save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_done_24dp"
        android:background="@android:color/transparent"
        android:onClick="updateButton"
        android:layout_above="@+id/decreaseItemCount" />
    <EditText
        android:id="@+id/itemNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/updateButton"
        android:hint="@string/itemNameEditText" />
    <TextView
        android:id="@+id/countTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/count"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/itemNameEditText" />
    <TextView
        android:id="@+id/itemCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateButton"
        android:layout_toRightOf="@id/countTextView"
        android:layout_marginLeft="10dp"
        android:hint="1" />
    <ImageButton
        android:id="@+id/decreaseItemCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/decreaseItemCount"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_exposure_minus_1_24dp"
        android:layout_below="@+id/itemNameEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <ImageButton
        android:id="@+id/increaseItemCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/decreaseItemCount"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_exposure_plus_1_24dp"
        android:layout_alignBottom="@+id/deleteItem"
        android:layout_alignTop="@+id/updateButton" />
    <ImageButton
        android:id="@+id/deleteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete_24dp"
        android:background="@android:color/transparent"
        android:onClick="deleteItem"
        android:layout_below="@+id/decreaseItemCount"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
