<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shavedandbearded.tomato.MainActivity"
    android:background="@drawable/ff">
    <ImageButton
        android:id="@+id/cookbook"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:src="@mipmap/ic_launcher_cb"
        android:hint="@string/cookbook"
        android:onClick="onClickOpenCookbook" />

    <ImageButton
        android:id="@+id/shoppingList"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:src="@mipmap/ic_launcher_sh"
        android:hint="@string/pantry"
        android:onClick="onClickOpenShoppingList"/>

    <ImageButton
        android:id="@+id/pantry"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:src="@mipmap/ic_launcher_p"
        android:hint="@string/shoppingList"
        android:onClick="onClickOpenPantry" />

    <TextView
        android:id="@+id/cookbook_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:layout_above="@+id/shoppingList"
        android:layout_toRightOf="@+id/cookbook"
        android:layout_toEndOf="@+id/cookbook"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/cookbook" />

    <TextView
        android:id="@+id/shoppingList_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/shoppingList"
        android:layout_toStartOf="@+id/shoppingList"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/shoppingList"/>

    <TextView
        android:id="@+id/pantry_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shoppingList"
        android:layout_toRightOf="@+id/pantry"
        android:layout_toEndOf="@+id/pantry"
        android:layout_marginTop="72dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/pantry" />
</RelativeLayout>
